# de-with-python-uv

./: hello.py  hello.txt  pyproject.toml
airflow/: requirements.txt
